# infer-cpp

./: .gitmodules  CMakeLists.txt  README.md
src/: gmm.cpp  gmm.h  kmeans.h  mathutil.cpp  mathutil.h
test/: CMakeLists.txt  gmm_test.cpp  kmeans_test.cpp  mathutil_test.cpp
